--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <p>Nazywam się Paweł — działam jako SoloTech. Zajmuję się tworzeniem rozszerzeń w X++ dla Microsoft Dynamics 365. Pomagam w analizie, projektowaniu i implementacji rozwiązań, które optymalizują procesy biznesowe i integrują systemy.</p>
     <div class="services">
       <div class="service">
-        <img src="https://images.unsplash.com/photo-1581091012184-5c1d4b03f2c6?auto=format&fit=crop&w=600&q=80" alt="Rozszerzenia X++">
+        <img src="https://images.unsplash.com/photo-1581090700227-4c4f50b1c2c1?auto=format&fit=crop&w=600&q=80" alt="Rozszerzenia X++">
         <p>Rozszerzenia X++</p>
       </div>
       <div class="service">
@@ -125,7 +125,7 @@
 
   <section>
     <h2>Portfolio (przykłady)</h2>
-    <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?auto=format&fit=crop&w=800&q=80" alt="Portfolio" style="width:100%; border-radius:6px;">
+    <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?auto=format&fit=crop&w=800&q=80" alt="Portfolio przykłady" style="width:100%; border-radius:6px;">
   </section>
 </main>
 
